--- a/Translation/PRP_en_it.xml
+++ b/Translation/PRP_en_it.xml
@@ -20,10 +20,22 @@
       <Dest>Red Rocket</Dest>
     </String>
     <String List="0">
+      <EDID>CambridgeMassChemical01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Mass Chemical</Source>
+      <Dest>Mass Chemical</Dest>
+    </String>
+    <String List="0">
       <EDID>Financial24</EDID>
       <REC>CELL:FULL</REC>
       <Source>Joe&apos;s Spuckies</Source>
       <Dest>Joe&apos;s Spuckies</Dest>
+    </String>
+    <String List="0">
+      <EDID>LaytonTowers01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Layton Towers</Source>
+      <Dest>Layton Towers</Dest>
     </String>
     <String List="0">
       <EDID>DLC04Nukacade01</EDID>
@@ -50,10 +62,34 @@
       <Dest>Colonial Taphouse</Dest>
     </String>
     <String List="0">
+      <EDID>DmndPublick01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Publick Occurrences</Source>
+      <Dest>Publick Occurrences</Dest>
+    </String>
+    <String List="0">
+      <EDID>SaugusIronworks01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Saugus Ironworks</Source>
+      <Dest>Saugus Ironworks</Dest>
+    </String>
+    <String List="0">
       <EDID>RelayTowerInt01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bunker</Source>
       <Dest>Bunker</Dest>
+    </String>
+    <String List="0">
+      <EDID>ArcjetSystems01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>ArcJet Systems</Source>
+      <Dest>ArcJet Systems</Dest>
+    </String>
+    <String List="0">
+      <EDID>DLC03BeaverCreekLanes01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Beaver Creek Lanes</Source>
+      <Dest>Beaver Creek Lanes</Dest>
     </String>
     <String List="0">
       <EDID>DLC04WarehouseAmbush</EDID>
@@ -62,10 +98,40 @@
       <Dest>Ambush Warehouse Cell</Dest>
     </String>
     <String List="0">
+      <EDID>Financial06</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Old Corner Bookstore</Source>
+      <Dest>Old Corner Bookstore</Dest>
+    </String>
+    <String List="0">
       <EDID>SuperDuperMart01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Super Duper Mart</Source>
       <Dest>Super Duper Mart</Dest>
+    </String>
+    <String List="0">
+      <EDID>SentinelSite01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Sentinel Site Prescott</Source>
+      <Dest>Sentinel Site Prescott</Dest>
+    </String>
+    <String List="0">
+      <EDID>FaneuilHall01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Faneuil Hall</Source>
+      <Dest>Faneuil Hall</Dest>
+    </String>
+    <String List="0">
+      <EDID>FortHagen01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Fort Hagen</Source>
+      <Dest>Fort Hagen</Dest>
+    </String>
+    <String List="0">
+      <EDID>GreenetechGenetics02</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Greenetech Genetics</Source>
+      <Dest>Greenetech Genetics</Dest>
     </String>
     <String List="0">
       <EDID>DLC03EchoLakeLumber01</EDID>
@@ -74,10 +140,58 @@
       <Dest>Bunker</Dest>
     </String>
     <String List="0">
+      <EDID>zUnusedTheaterLaundromat</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
+    </String>
+    <String List="0">
+      <EDID>Wattz01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Wattz Electronics</Source>
+      <Dest>Wattz Electronics</Dest>
+    </String>
+    <String List="0">
+      <EDID>DLC03FringeCoveDocks01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
+    </String>
+    <String List="0">
+      <EDID>CambridgeKendallHospital01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Kendall Hospital</Source>
+      <Dest>Kendall Hospital</Dest>
+    </String>
+    <String List="0">
+      <EDID>DmndDugoutInn01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Dugout Inn</Source>
+      <Dest>Dugout Inn</Dest>
+    </String>
+    <String List="0">
+      <EDID>MiltonGeneral01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Milton General Hospital</Source>
+      <Dest>Milton General Hospital</Dest>
+    </String>
+    <String List="0">
       <EDID>DLC04GZNukaGalaxy01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-Galaxy</Source>
       <Dest>Nuka-Galaxy</Dest>
+    </String>
+    <String List="0">
+      <EDID>HubrisComics01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Hubris Comics</Source>
+      <Dest>Hubris Comics</Dest>
+    </String>
+    <String List="0">
+      <EDID>PoseidonEnergy01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Poseidon Energy</Source>
+      <Dest>Poseidon Energy</Dest>
     </String>
     <String List="0">
       <EDID>DLC03HarborGrandHotel01</EDID>
@@ -86,10 +200,64 @@
       <Dest>Harbor Grand Hotel</Dest>
     </String>
     <String List="0">
+      <EDID>DLC04HubFizztopMountainInterior01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Fizztop Mountain</Source>
+      <Dest>Fizztop Mountain</Dest>
+    </String>
+    <String List="0">
+      <EDID>HestersRobotics01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Hester&apos;s Consumer Robotics</Source>
+      <Dest>Hester&apos;s Consumer Robotics</Dest>
+    </String>
+    <String List="0">
+      <EDID>MedfordMemorial01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Medford Memorial Hospital</Source>
+      <Dest>Medford Memorial Hospital</Dest>
+    </String>
+    <String List="0">
+      <EDID>NorthEndMeanPastries</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Mean Pastries</Source>
+      <Dest>Mean Pastries</Dest>
+    </String>
+    <String List="0">
       <EDID>Vault81</EDID>
       <REC>CELL:FULL</REC>
       <Source>Vault 81</Source>
       <Dest>Vault 81</Dest>
+    </String>
+    <String List="0">
+      <EDID>ThicketExcavations01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Thicket Excavations</Source>
+      <Dest>Thicket Excavations</Dest>
+    </String>
+    <String List="0">
+      <EDID>CambridgePolymerLabs01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Cambridge Polymer Labs</Source>
+      <Dest>Cambridge Polymer Labs</Dest>
+    </String>
+    <String List="0">
+      <EDID>Financial07</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Haymarket Mall</Source>
+      <Dest>Haymarket Mall</Dest>
+    </String>
+    <String List="0">
+      <EDID>USSConstitution01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>U.S.S. Constitution</Source>
+      <Dest>U.S.S. Constitution</Dest>
+    </String>
+    <String List="0">
+      <EDID>BobbisNewPlace01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Hawthorne Estate</Source>
+      <Dest>Hawthorne Estate</Dest>
     </String>
     <String List="0">
       <EDID>Vault11402</EDID>
@@ -104,10 +272,22 @@
       <Dest>Vault 75</Dest>
     </String>
     <String List="0">
+      <EDID>TrinityChurch01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Trinity Church</Source>
+      <Dest>Trinity Church</Dest>
+    </String>
+    <String List="0">
       <EDID>BostonCommon02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Boylston Club</Source>
       <Dest>Boylston Club</Dest>
+    </String>
+    <String List="0">
+      <EDID>CustomHouseTower01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Custom House Tower</Source>
+      <Dest>Custom House Tower</Dest>
     </String>
     <String List="0">
       <EDID>GeneralAtomicsGalleria01</EDID>
@@ -140,10 +320,28 @@
       <Dest>Back Street Apparel</Dest>
     </String>
     <String List="0">
+      <EDID>ShamrockTaphouse01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Shamrock Taphouse</Source>
+      <Dest>Taphouse di Shamrock</Dest>
+    </String>
+    <String List="0">
       <EDID>FensBank01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bridgeway Trust</Source>
       <Dest>Bridgeway Trust</Dest>
+    </String>
+    <String List="0">
+      <EDID>UniversityPoint01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>University Point: Sedgwick Hall</Source>
+      <Dest>University Point: Sedgwick Hall</Dest>
+    </String>
+    <String List="0">
+      <EDID>NorthEndSalemStreetCottage</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Cottage</Source>
+      <Dest>Cottage</Dest>
     </String>
     <String List="0">
       <EDID>HalluciGen01</EDID>
@@ -200,6 +398,12 @@
       <Dest>Bunker</Dest>
     </String>
     <String List="0">
+      <EDID>OldGulletSinkhole01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Old Gullet Sinkhole</Source>
+      <Dest>Old Gullet Sinkhole</Dest>
+    </String>
+    <String List="0">
       <EDID>DunwichBorers01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dunwich Borers</Source>
@@ -212,16 +416,70 @@
       <Dest>Vault 81</Dest>
     </String>
     <String List="0">
+      <EDID>DLC04GrandchesterMansion01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Grandchester Mystery Mansion</Source>
+      <Dest>Grandchester Mystery Mansion</Dest>
+    </String>
+    <String List="0">
       <EDID>Vault111Cryo</EDID>
       <REC>CELL:FULL</REC>
       <Source>Vault 111</Source>
       <Dest>Vault 111</Dest>
     </String>
     <String List="0">
+      <EDID>MedTekResearch01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Med-Tek Research</Source>
+      <Dest>Med-Tek Research</Dest>
+    </String>
+    <String List="0">
+      <EDID>CombatZone01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Combat Zone</Source>
+      <Dest>Combat Zone</Dest>
+    </String>
+    <String List="0">
+      <EDID>Financial30</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Water Street Apartments</Source>
+      <Dest>Water Street Apartments</Dest>
+    </String>
+    <String List="0">
+      <EDID>zPOIJoel06</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
+      <Dest>Electrical Hobbyist&apos;s Club Cellar</Dest>
+    </String>
+    <String List="0">
+      <EDID>MaldenCenter01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Malden Center</Source>
+      <Dest>Malden Center</Dest>
+    </String>
+    <String List="0">
+      <EDID>GreenetechGenetics01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Greenetech Genetics</Source>
+      <Dest>Greenetech Genetics</Dest>
+    </String>
+    <String List="0">
       <EDID>UniversityPoint02</EDID>
       <REC>CELL:FULL</REC>
       <Source>University Credit Union</Source>
       <Dest>University Credit Union</Dest>
+    </String>
+    <String List="0">
+      <EDID>OldNorthChurch01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Old North Church</Source>
+      <Dest>Old North Church</Dest>
+    </String>
+    <String List="0">
+      <EDID>zUnusedTheater46A</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>Yangtze01</EDID>
@@ -234,6 +492,24 @@
       <REC>CELL:FULL</REC>
       <Source>35 Court</Source>
       <Dest>35 Court</Dest>
+    </String>
+    <String List="0">
+      <EDID>DmndRadio01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Diamond City Radio</Source>
+      <Dest>Diamond City Radio</Dest>
+    </String>
+    <String List="0">
+      <EDID>SuffolkCountyCharterSchool01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Suffolk County Charter School</Source>
+      <Dest>Suffolk County Charter School</Dest>
+    </String>
+    <String List="0">
+      <EDID>CombatZone02</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Quick Test Cell</Source>
+      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC04ColaCars01</EDID>
