--- a/Translation/PRP_en_it.xml
+++ b/Translation/PRP_en_it.xml
@@ -32,12 +32,6 @@
       <Dest>Joe&apos;s Spuckies</Dest>
     </String>
     <String List="0">
-      <EDID>LaytonTowers01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Layton Towers</Source>
-      <Dest>Layton Towers</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04Nukacade01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-Cade</Source>
@@ -62,28 +56,10 @@
       <Dest>Colonial Taphouse</Dest>
     </String>
     <String List="0">
-      <EDID>DmndPublick01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Publick Occurrences</Source>
-      <Dest>Publick Occurrences</Dest>
-    </String>
-    <String List="0">
-      <EDID>SaugusIronworks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Saugus Ironworks</Source>
-      <Dest>Saugus Ironworks</Dest>
-    </String>
-    <String List="0">
       <EDID>RelayTowerInt01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bunker</Source>
       <Dest>Bunker</Dest>
-    </String>
-    <String List="0">
-      <EDID>ArcjetSystems01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>ArcJet Systems</Source>
-      <Dest>ArcJet Systems</Dest>
     </String>
     <String List="0">
       <EDID>DLC03BeaverCreekLanes01</EDID>
@@ -92,34 +68,10 @@
       <Dest>Beaver Creek Lanes</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04WarehouseAmbush</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ambush Warehouse Cell</Source>
-      <Dest>Ambush Warehouse Cell</Dest>
-    </String>
-    <String List="0">
-      <EDID>Financial06</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Old Corner Bookstore</Source>
-      <Dest>Old Corner Bookstore</Dest>
-    </String>
-    <String List="0">
       <EDID>SuperDuperMart01</EDID>
       <REC>CELL:FULL</REC>
-      <Source>Super Duper Mart</Source>
-      <Dest>Super Duper Mart</Dest>
-    </String>
-    <String List="0">
-      <EDID>SentinelSite01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Sentinel Site Prescott</Source>
-      <Dest>Sentinel Site Prescott</Dest>
-    </String>
-    <String List="0">
-      <EDID>FaneuilHall01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Faneuil Hall</Source>
-      <Dest>Faneuil Hall</Dest>
+      <Source>Super-Duper Mart</Source>
+      <Dest>Super-Duper Mart</Dest>
     </String>
     <String List="0">
       <EDID>FortHagen01</EDID>
@@ -128,46 +80,16 @@
       <Dest>Fort Hagen</Dest>
     </String>
     <String List="0">
-      <EDID>GreenetechGenetics02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Greenetech Genetics</Source>
-      <Dest>Greenetech Genetics</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC03EchoLakeLumber01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bunker</Source>
       <Dest>Bunker</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheaterLaundromat</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
-      <EDID>Wattz01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Wattz Electronics</Source>
-      <Dest>Wattz Electronics</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FringeCoveDocks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>CambridgeKendallHospital01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Kendall Hospital</Source>
       <Dest>Kendall Hospital</Dest>
-    </String>
-    <String List="0">
-      <EDID>DmndDugoutInn01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Dugout Inn</Source>
-      <Dest>Dugout Inn</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -182,12 +104,6 @@
       <Dest>Nuka-Galaxy</Dest>
     </String>
     <String List="0">
-      <EDID>HubrisComics01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Hubris Comics</Source>
-      <Dest>Hubris Comics</Dest>
-    </String>
-    <String List="0">
       <EDID>PoseidonEnergy01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Poseidon Energy</Source>
@@ -198,18 +114,6 @@
       <REC>CELL:FULL</REC>
       <Source>Harbor Grand Hotel</Source>
       <Dest>Harbor Grand Hotel</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC04HubFizztopMountainInterior01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Fizztop Mountain</Source>
-      <Dest>Fizztop Mountain</Dest>
-    </String>
-    <String List="0">
-      <EDID>HestersRobotics01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Hester&apos;s Consumer Robotics</Source>
-      <Dest>Hester&apos;s Consumer Robotics</Dest>
     </String>
     <String List="0">
       <EDID>MedfordMemorial01</EDID>
@@ -228,30 +132,6 @@
       <REC>CELL:FULL</REC>
       <Source>Vault 81</Source>
       <Dest>Vault 81</Dest>
-    </String>
-    <String List="0">
-      <EDID>ThicketExcavations01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Thicket Excavations</Source>
-      <Dest>Thicket Excavations</Dest>
-    </String>
-    <String List="0">
-      <EDID>CambridgePolymerLabs01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cambridge Polymer Labs</Source>
-      <Dest>Cambridge Polymer Labs</Dest>
-    </String>
-    <String List="0">
-      <EDID>Financial07</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Haymarket Mall</Source>
-      <Dest>Haymarket Mall</Dest>
-    </String>
-    <String List="0">
-      <EDID>USSConstitution01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>U.S.S. Constitution</Source>
-      <Dest>U.S.S. Constitution</Dest>
     </String>
     <String List="0">
       <EDID>BobbisNewPlace01</EDID>
@@ -284,12 +164,6 @@
       <Dest>Boylston Club</Dest>
     </String>
     <String List="0">
-      <EDID>CustomHouseTower01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Custom House Tower</Source>
-      <Dest>Custom House Tower</Dest>
-    </String>
-    <String List="0">
       <EDID>GeneralAtomicsGalleria01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Back Alley Bowling</Source>
@@ -302,46 +176,10 @@
       <Dest>Fizztop Grille</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Breakheart Banks</Source>
-      <Dest>Breakheart Banks</Dest>
-    </String>
-    <String List="0">
       <EDID>RelayTowerInt03</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bunker</Source>
       <Dest>Bunker</Dest>
-    </String>
-    <String List="0">
-      <EDID>BackStreetApparel01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Back Street Apparel</Source>
-      <Dest>Back Street Apparel</Dest>
-    </String>
-    <String List="0">
-      <EDID>ShamrockTaphouse01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Shamrock Taphouse</Source>
-      <Dest>Taphouse di Shamrock</Dest>
-    </String>
-    <String List="0">
-      <EDID>FensBank01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Bridgeway Trust</Source>
-      <Dest>Bridgeway Trust</Dest>
-    </String>
-    <String List="0">
-      <EDID>UniversityPoint01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>University Point: Sedgwick Hall</Source>
-      <Dest>University Point: Sedgwick Hall</Dest>
-    </String>
-    <String List="0">
-      <EDID>NorthEndSalemStreetCottage</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cottage</Source>
-      <Dest>Cottage</Dest>
     </String>
     <String List="0">
       <EDID>HalluciGen01</EDID>
@@ -398,12 +236,6 @@
       <Dest>Bunker</Dest>
     </String>
     <String List="0">
-      <EDID>OldGulletSinkhole01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Old Gullet Sinkhole</Source>
-      <Dest>Old Gullet Sinkhole</Dest>
-    </String>
-    <String List="0">
       <EDID>DunwichBorers01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dunwich Borers</Source>
@@ -428,60 +260,6 @@
       <Dest>Vault 111</Dest>
     </String>
     <String List="0">
-      <EDID>MedTekResearch01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Med-Tek Research</Source>
-      <Dest>Med-Tek Research</Dest>
-    </String>
-    <String List="0">
-      <EDID>CombatZone01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Combat Zone</Source>
-      <Dest>Combat Zone</Dest>
-    </String>
-    <String List="0">
-      <EDID>Financial30</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Water Street Apartments</Source>
-      <Dest>Water Street Apartments</Dest>
-    </String>
-    <String List="0">
-      <EDID>zPOIJoel06</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Electrical Hobbyist&apos;s Club Cellar</Dest>
-    </String>
-    <String List="0">
-      <EDID>MaldenCenter01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Malden Center</Source>
-      <Dest>Malden Center</Dest>
-    </String>
-    <String List="0">
-      <EDID>GreenetechGenetics01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Greenetech Genetics</Source>
-      <Dest>Greenetech Genetics</Dest>
-    </String>
-    <String List="0">
-      <EDID>UniversityPoint02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>University Credit Union</Source>
-      <Dest>University Credit Union</Dest>
-    </String>
-    <String List="0">
-      <EDID>OldNorthChurch01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Old North Church</Source>
-      <Dest>Old North Church</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedTheater46A</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>Yangtze01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Yangtze</Source>
@@ -492,24 +270,6 @@
       <REC>CELL:FULL</REC>
       <Source>35 Court</Source>
       <Dest>35 Court</Dest>
-    </String>
-    <String List="0">
-      <EDID>DmndRadio01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Diamond City Radio</Source>
-      <Dest>Diamond City Radio</Dest>
-    </String>
-    <String List="0">
-      <EDID>SuffolkCountyCharterSchool01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Suffolk County Charter School</Source>
-      <Dest>Suffolk County Charter School</Dest>
-    </String>
-    <String List="0">
-      <EDID>CombatZone02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC04ColaCars01</EDID>
