--- a/Translation/PRP_en_it.xml
+++ b/Translation/PRP_en_it.xml
@@ -7,17 +7,17 @@
     <Version>2</Version>
   </Params>
   <Content>
-    <String List="0" Partial="2">
+    <String List="0">
       <EDID>[00000000]</EDID>
       <REC>TES4:CNAM</REC>
       <Source>BenRierimanu</Source>
       <Dest>BenRierimanu</Dest>
     </String>
-    <String List="0" Partial="2">
+    <String List="0">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>https://www.nexusmods.com/fallout4/mods/46403 0.59</Source>
-      <Dest>https://www.nexusmods.com/fallout4/mods/46403 0.59</Dest>
+      <Source>https://www.nexusmods.com/fallout4/mods/46403 0.57.5</Source>
+      <Dest>https://www.nexusmods.com/fallout4/mods/46403 0.57.5</Dest>
     </String>
     <String List="0">
       <EDID>CroupManor01</EDID>
@@ -533,7 +533,7 @@
       <EDID>FaneuilHall01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Faneuil Hall</Source>
-      <Dest>Faneuil Hall</Dest>
+      <Dest>Sala Faneuil</Dest>
     </String>
     <String List="0">
       <EDID>FortHagen01</EDID>
@@ -686,12 +686,6 @@
       <Dest>Rifugio</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseIndustrialMachines</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The Incredible Machines</Source>
-      <Dest>La macchine incredibili</Dest>
-    </String>
-    <String List="0">
       <EDID>ccTOSFO4001</EDID>
       <REC>CELL:FULL</REC>
       <Source>Noir Penthouse</Source>
@@ -708,12 +702,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cambridge Police Station</Source>
       <Dest>Stazione di polizia di Cambridge</Dest>
-    </String>
-    <String List="0">
-      <EDID>REHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -791,7 +779,7 @@
       <EDID>zLexingtonGarage</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Parking Garage</Source>
-      <Dest>Parcheggio garage di Lexington</Dest>
+      <Dest>Parcheggio Lexington</Dest>
     </String>
     <String List="0">
       <EDID>zUnusedSubwayTerminalShowcase</EDID>
@@ -989,7 +977,7 @@
       <EDID>USSConstitution01</EDID>
       <REC>CELL:FULL</REC>
       <Source>U.S.S. Constitution</Source>
-      <Dest>U.S.S. Constitution</Dest>
+      <Dest>Costituzione americana</Dest>
     </String>
     <String List="0">
       <EDID>BobbisNewPlace01</EDID>
@@ -1223,7 +1211,7 @@
       <EDID>zLexingtonPharmacy</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Pharmacy</Source>
-      <Dest>Farmacia di Lexington</Dest>
+      <Dest>Farmacia Lexington</Dest>
     </String>
     <String List="0">
       <EDID>RelayTowerInt03</EDID>
@@ -1325,7 +1313,7 @@
       <EDID>UniversityPoint01</EDID>
       <REC>CELL:FULL</REC>
       <Source>University Point: Sedgwick Hall</Source>
-      <Dest>University Point: Sedgwick Hall</Dest>
+      <Dest>University Point: Sala Sedgwick</Dest>
     </String>
     <String List="0">
       <EDID>zInstituteRotunda</EDID>
@@ -1538,12 +1526,6 @@
       <Dest>Vault 95</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseWorkbenches</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Banco da lavoro e prosperità</Dest>
-    </String>
-    <String List="0">
       <EDID>WestonWaterTreatment01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Weston Water Treatment Plant</Source>
@@ -1554,6 +1536,12 @@
       <REC>CELL:FULL</REC>
       <Source>Ticker Tape Lounge</Source>
       <Dest>Sala del telegrafo</Dest>
+    </String>
+    <String List="0">
+      <EDID>MassFusion02Trans</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Mass Fusion Elevator</Source>
+      <Dest>Ascensore della Mass Fusion</Dest>
     </String>
     <String List="0">
       <EDID>InstituteBioScience</EDID>
@@ -1706,6 +1694,12 @@
       <Dest>Caserma della Guardia Nazionale</Dest>
     </String>
     <String List="0">
+      <EDID>CombatZoneHoldingCell</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Combat Zone Holding Cell</Source>
+      <Dest>Gabbia della Combat Zone</Dest>
+    </String>
+    <String List="0">
       <EDID>DmndStandsLatimer01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Latimer Residence</Source>
@@ -1775,7 +1769,7 @@
       <EDID>zPOIJoel06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Electrical Hobbyist&apos;s Club Cellar</Dest>
+      <Dest>Cantina del club degli hobbisti elettrici</Dest>
     </String>
     <String List="0">
       <EDID>DLC03POI40Int</EDID>
@@ -1988,12 +1982,6 @@
       <Dest>Appartamenti</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The most dangerous cell</Source>
-      <Dest>La cella più pericolosa</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndGreenhouse01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Greenhouse</Source>
@@ -2058,6 +2046,12 @@
       <REC>WRLD:FULL</REC>
       <Source>Commonwealth</Source>
       <Dest>Commonwealth</Dest>
+    </String>
+    <String List="0">
+      <EDID>DiamondCityFX</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Diamond City</Source>
+      <Dest>Diamond City</Dest>
     </String>
     <String List="0">
       <EDID>DiamondCity</EDID>
