Move the contributed Spanish language files over to the correct directory. Noticed a few lines in PRP.xml that may need looked at.

--- a/Translation/AlootHomePlate_0.49.10262021_en_es.xml
+++ b/Translation/AlootHomePlate_0.49.10262021_en_es.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>AlootHomePlate.esp</Addon>
+    <Addon>AlootHomePlate_Old.esp</Addon>
     <Source>en</Source>
     <Dest>es</Dest>
     <Version>2</Version>
