--- a/Translation/PPF_en_es.xml
+++ b/Translation/PPF_en_es.xml
@@ -7,13 +7,13 @@
     <Version>2</Version>
   </Params>
   <Content>
-    <String List="0" Partial="2">
+    <String List="0">
       <EDID>[00000000]</EDID>
       <REC>TES4:CNAM</REC>
       <Source>BenRierimanu</Source>
       <Dest>BenRierimanu</Dest>
     </String>
-    <String List="0" Partial="2">
+    <String List="0">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
       <Source>https://www.nexusmods.com/fallout4/mods/46403 0.59</Source>
@@ -311,7 +311,7 @@
       <EDID>DLC03FarHarbor</EDID>
       <REC>WRLD:FULL</REC>
       <Source>The Island</Source>
-      <Dest>La isla</Dest>
+      <Dest>La Isla</Dest>
     </String>
     <String List="0">
       <EDID>DLC03VRWorldspace</EDID>
