--- a/Translation/PRP-Compat-UIL_en_es.xml
+++ b/Translation/PRP-Compat-UIL_en_es.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PRP.esp</Addon>
+    <Addon>PRP-Compat-UIL.esp</Addon>
     <Source>en</Source>
     <Dest>es</Dest>
     <Version>2</Version>
@@ -170,12 +170,6 @@
       <Dest>Torre del castillo del rey Cola</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04NWJunkyardUFO01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ultimate UFO</Source>
-      <Dest>OVNI Final</Dest>
-    </String>
-    <String List="0">
       <EDID>ShawHighSchool01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Shaw High School</Source>
@@ -293,7 +287,7 @@
       <EDID>CambridgePlumbing01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Plumber&apos;s Secret</Source>
-      <Dest>Secreto del Fontanero</Dest>
+      <Dest>Secreto del fontanero</Dest>
     </String>
     <String List="0">
       <EDID>DmndAllFaithsChapel01</EDID>
@@ -344,12 +338,6 @@
       <Dest>Escondite</Dest>
     </String>
     <String List="0">
-      <EDID>PrewarTVStudio</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Colonial&apos;s Department Store</Source>
-      <Dest>Grandes Almacenes Colonial&apos;s</Dest>
-    </String>
-    <String List="0">
       <EDID>SaugusIronworks01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Saugus Ironworks</Source>
@@ -359,7 +347,7 @@
       <EDID>NorthEndValentiStation</EDID>
       <REC>CELL:FULL</REC>
       <Source>Subway Station</Source>
-      <Dest>Estación de Metro</Dest>
+      <Dest>Estación de metro</Dest>
     </String>
     <String List="0">
       <EDID>BostonPublicLibrary02</EDID>
@@ -440,12 +428,6 @@
       <Dest>Sótano de Vim!</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04WarehouseAmbush</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ambush Warehouse Cell</Source>
-      <Dest>Celda de almacén de emboscada</Dest>
-    </String>
-    <String List="0">
       <EDID>RevereBeachStation01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Revere Beach Station</Source>
@@ -455,7 +437,7 @@
       <EDID>Financial06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Old Corner Bookstore</Source>
-      <Dest>Librería Old Corner</Dest>
+      <Dest>Old Corner Bookstore</Dest>
     </String>
     <String List="0">
       <EDID>DLC04HubPackLair</EDID>
@@ -467,7 +449,7 @@
       <EDID>TheBigDig01</EDID>
       <REC>CELL:FULL</REC>
       <Source>The Dig</Source>
-      <Dest>La Excavación</Dest>
+      <Dest>La excavación</Dest>
     </String>
     <String List="0">
       <EDID>DmndJohnsHouse01</EDID>
@@ -510,12 +492,6 @@
       <REC>CELL:FULL</REC>
       <Source>Dartmouth Professional Building</Source>
       <Dest>Edificio profesional de Dartmouth</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedFalloutShelter02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Shelter</Source>
-      <Dest>Refugio</Dest>
     </String>
     <String List="0">
       <EDID>DmndChoiceChops01</EDID>
@@ -572,12 +548,6 @@
       <Dest>Cubierta principal del Prydwen</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheaterLaundromat</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04GZVaultTec01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Vault-Tec: Among the Stars</Source>
@@ -608,12 +578,6 @@
       <Dest>Wattz Electronics</Dest>
     </String>
     <String List="0">
-      <EDID>MQ203KelloggsBrain</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Memories</Source>
-      <Dest>Recuerdos</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04SafariBearCave</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bear Cave</Source>
@@ -630,18 +594,6 @@
       <REC>CELL:FULL</REC>
       <Source>Fraternal Post 115</Source>
       <Dest>Puesto fraternal 115</Dest>
-    </String>
-    <String List="0">
-      <EDID>InstituteCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute Sublevel 21-D</Source>
-      <Dest>Subnivel 21-D del Instituto</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FringeCoveDocks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC04TransitCenter01</EDID>
@@ -686,18 +638,6 @@
       <Dest>Refugio</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseIndustrialMachines</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The Incredible Machines</Source>
-      <Dest>Las máquinas increíbles</Dest>
-    </String>
-    <String List="0">
-      <EDID>ccTOSFO4001</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Noir Penthouse</Source>
-      <Dest>Ático noir</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
@@ -708,12 +648,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cambridge Police Station</Source>
       <Dest>Comisaría de Cambridge</Dest>
-    </String>
-    <String List="0">
-      <EDID>REHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -794,12 +728,6 @@
       <Dest>Aparcamiento</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedSubwayTerminalShowcase</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Terminals &amp; Holotapes, Oh My.</Source>
-      <Dest>Terminales y Holocintas, Oh, Vaya.</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04SafariWelcomeCenter</EDID>
       <REC>CELL:FULL</REC>
       <Source>Safari Adventure Welcome Center</Source>
@@ -815,7 +743,7 @@
       <EDID>DLC03HarborGrandHotel01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Harbor Grand Hotel</Source>
-      <Dest>Gran Hotel Harbor</Dest>
+      <Dest>Harbor Grand Hotel</Dest>
     </String>
     <String List="0">
       <EDID>DLC04HubFizztopMountainInterior01</EDID>
@@ -851,7 +779,7 @@
       <EDID>NorthEndMeanPastries</EDID>
       <REC>CELL:FULL</REC>
       <Source>Mean Pastries</Source>
-      <Dest>Pasteles Bestiales</Dest>
+      <Dest>Pasteles malos</Dest>
     </String>
     <String List="0">
       <EDID>DmndMoeCroninsHouse01</EDID>
@@ -870,12 +798,6 @@
       <REC>CELL:FULL</REC>
       <Source>Gunners Plaza Basement</Source>
       <Dest>Sótano de la plaza de los artilleros</Dest>
-    </String>
-    <String List="0">
-      <EDID>ThicketExcavations01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Thicket Excavations</Source>
-      <Dest>Excavaciones Thicket</Dest>
     </String>
     <String List="0">
       <EDID>FensParkviewApartments02</EDID>
@@ -1136,12 +1058,6 @@
       <Dest>Torre de aduana</Dest>
     </String>
     <String List="0">
-      <EDID>InstituteSRB</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute SRB</Source>
-      <Dest>SRB del Instituto</Dest>
-    </String>
-    <String List="0">
       <EDID>RelayTowerInt17</EDID>
       <REC>CELL:FULL</REC>
       <Source>Storage</Source>
@@ -1175,13 +1091,7 @@
       <EDID>GeneralAtomicsGalleria01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Back Alley Bowling</Source>
-      <Dest>Bolera de Back Alley</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedGrenades</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Bodega</Dest>
+      <Dest>Back Alley Bowling</Dest>
     </String>
     <String List="0">
       <EDID>TheaterMassBayMedicalCenter01</EDID>
@@ -1193,19 +1103,13 @@
       <EDID>DLC03NucleusSubInterior01</EDID>
       <REC>CELL:FULL</REC>
       <Source>The Vessel</Source>
-      <Dest>La Nave</Dest>
+      <Dest>La nave</Dest>
     </String>
     <String List="0">
       <EDID>DLC04HubFizztopGrille01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Fizztop Grille</Source>
       <Dest>Fizztop Grille</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Breakheart Banks</Source>
-      <Dest>Breakheart Banks</Dest>
     </String>
     <String List="0">
       <EDID>ShenleysOysterBar01</EDID>
@@ -1256,22 +1160,10 @@
       <Dest>Casa de los primates</Dest>
     </String>
     <String List="0">
-      <EDID>InstituteOldRobotics01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Old Robotics</Source>
-      <Dest>Robótica antigua</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedFinancial23</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Atlantic Offices</Source>
-      <Dest>Oficinas del Atlántico</Dest>
-    </String>
-    <String List="0">
       <EDID>GwinnettBrewery02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Gwinnett Main Brewery</Source>
-      <Dest>Cervecería Gwinnett</Dest>
+      <Dest>Gwinnett Main Brewery</Dest>
     </String>
     <String List="0">
       <EDID>DmndStandsHawthorne01</EDID>
@@ -1295,7 +1187,7 @@
       <EDID>ShamrockTaphouse01</EDID>
       <REC>CELL:FULL</REC>
       <Source>The Shamrock Taphouse</Source>
-      <Dest>Taphouse de Shamrock</Dest>
+      <Dest>La Taphouse de Shamrock</Dest>
     </String>
     <String List="0">
       <EDID>FensBank01</EDID>
@@ -1340,22 +1232,10 @@
       <Dest>Teatro Warren</Dest>
     </String>
     <String List="0">
-      <EDID>InstituteRobotics</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute Robotics</Source>
-      <Dest>Robótica del Instituto</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04Gauntlet01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-World Access Tunnels</Source>
       <Dest>Túneles de acceso de Nuka-World</Dest>
-    </String>
-    <String List="0">
-      <EDID>SanctuaryRosaHouse</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Rosa Residence</Source>
-      <Dest>Residencia de Rosa</Dest>
     </String>
     <String List="0">
       <EDID>InstituteFEVlab</EDID>
@@ -1406,12 +1286,6 @@
       <Dest>Manicomio estatal Parsons</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedCellar02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Bodega</Dest>
-    </String>
-    <String List="0">
       <EDID>zLexingtonLaundromat</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Laundromat</Source>
@@ -1445,19 +1319,13 @@
       <EDID>CambridgeCollegeAdminBuilding</EDID>
       <REC>CELL:FULL</REC>
       <Source>College Admin Building</Source>
-      <Dest>Edificio administrativo de la Universidad</Dest>
+      <Dest>Edificio administrativo de la universidad</Dest>
     </String>
     <String List="0">
       <EDID>ListeningPostBravo01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Listening Post Bravo</Source>
       <Dest>Puesto de escucha Bravo</Dest>
-    </String>
-    <String List="0">
-      <EDID>QASmoke</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Tunnels</Source>
-      <Dest>Túneles</Dest>
     </String>
     <String List="0">
       <EDID>LongneckLukowskis01</EDID>
@@ -1499,7 +1367,7 @@
       <EDID>BeaconHillPub</EDID>
       <REC>CELL:FULL</REC>
       <Source>Prost Bar</Source>
-      <Dest>Bar Prost</Dest>
+      <Dest>Prost Bar</Dest>
     </String>
     <String List="0">
       <EDID>TheaterHub360</EDID>
@@ -1517,7 +1385,7 @@
       <EDID>DmndScienceCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Science! Center</Source>
-      <Dest>Centro Science!</Dest>
+      <Dest>Science! Center</Dest>
     </String>
     <String List="0">
       <EDID>IrishPrideShipyard01</EDID>
@@ -1538,12 +1406,6 @@
       <Dest>Refugio 95</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseWorkbenches</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Bancos de trabajo por doquier</Dest>
-    </String>
-    <String List="0">
       <EDID>WestonWaterTreatment01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Weston Water Treatment Plant</Source>
@@ -1554,12 +1416,6 @@
       <REC>CELL:FULL</REC>
       <Source>Ticker Tape Lounge</Source>
       <Dest>Salón Ticker Tape</Dest>
-    </String>
-    <String List="0">
-      <EDID>InstituteBioScience</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute BioScience</Source>
-      <Dest>Biociencias del Instituto</Dest>
     </String>
     <String List="0">
       <EDID>DLC03Acadia</EDID>
@@ -1778,12 +1634,6 @@
       <Dest>Bodega</Dest>
     </String>
     <String List="0">
-      <EDID>DLC03POI40Int</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Pump Control</Source>
-      <Dest>Control de bomba</Dest>
-    </String>
-    <String List="0">
       <EDID>MaldenCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Malden Center</Source>
@@ -1817,7 +1667,7 @@
       <EDID>UniversityPoint02</EDID>
       <REC>CELL:FULL</REC>
       <Source>University Credit Union</Source>
-      <Dest>Unión Universitaria de Crédito</Dest>
+      <Dest>Unión universitaria de crédito</Dest>
     </String>
     <String List="0">
       <EDID>DLC04KiddieKingdomFunHouse01</EDID>
@@ -1836,12 +1686,6 @@
       <REC>CELL:FULL</REC>
       <Source>Old North Church</Source>
       <Dest>Old North Church</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedTheater46A</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>CambridgeChurchGraveyard01</EDID>
@@ -1883,7 +1727,7 @@
       <EDID>DBTechHighSchool02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Medical Center Station</Source>
-      <Dest>Estación del Centro Médico</Dest>
+      <Dest>Estación de centro médico</Dest>
     </String>
     <String List="0">
       <EDID>VaultTecOffice01</EDID>
@@ -1896,12 +1740,6 @@
       <REC>CELL:FULL</REC>
       <Source>Parsons State Basement</Source>
       <Dest>Sótano de Parsons</Dest>
-    </String>
-    <String List="0">
-      <EDID>Vault111Start</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault 111 Main Entrance</Source>
-      <Dest>Entrada principal al Refugio 111</Dest>
     </String>
     <String List="0">
       <EDID>DmndRadio01</EDID>
@@ -1920,12 +1758,6 @@
       <REC>CELL:FULL</REC>
       <Source>D.B. Technical High School</Source>
       <Dest>Instituto Técnico D.B.</Dest>
-    </String>
-    <String List="0">
-      <EDID>CombatZone02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC03AlderseaDaySpa01</EDID>
@@ -1988,12 +1820,6 @@
       <Dest>Apartamentos</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The most dangerous cell</Source>
-      <Dest>La celda más peligrosa</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndGreenhouse01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Greenhouse</Source>
@@ -2024,12 +1850,6 @@
       <Dest>Armería del sótano</Dest>
     </String>
     <String List="0">
-      <EDID>DLC06VaultWorkshop</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault 88</Source>
-      <Dest>Refugio 88</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04KiddieKingdomTheater01</EDID>
       <REC>CELL:FULL</REC>
       <Source>King Cola&apos;s Court</Source>
@@ -2052,60 +1872,6 @@
       <REC>CELL:FULL</REC>
       <Source>Museum of Witchcraft</Source>
       <Dest>Museo de la Brujería</Dest>
-    </String>
-    <String List="0">
-      <EDID>Commonwealth</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Commonwealth</Source>
-      <Dest>Commonwealth</Dest>
-    </String>
-    <String List="0">
-      <EDID>DiamondCity</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Diamond City</Source>
-      <Dest>Diamond City</Dest>
-    </String>
-    <String List="0">
-      <EDID>Goodneighbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Goodneighbor</Source>
-      <Dest>Goodneighbor</Dest>
-    </String>
-    <String List="0">
-      <EDID>SanctuaryHillsWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Sanctuary Hills</Source>
-      <Dest>Sanctuary Hills</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FarHarbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>The Island</Source>
-      <Dest>La Isla</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03VRWorldspace</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Simulation</Source>
-      <Dest>Simulación</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-World</Source>
-      <Dest>Nuka-World</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldAmphitheater</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Bradberton Amphitheater</Source>
-      <Dest>Anfiteatro Bradberton</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldMarket</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-Town Market</Source>
-      <Dest>Mercado de Nuka-Town</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
